--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: minimal
-title: [Jackson Projects]
-description: [A portfolio of Jackson's Projects]
+# title: [Jackson Projects]
+# description: [A portfolio of Jackson's Projects]
