testing with publishing

--- a/Jackson-Personal-Website/hugo.toml
+++ b/Jackson-Personal-Website/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://jacksondingjd.github.io/Jackson-s-Personal-Website/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'glim-midnight'
